--- a/env.example
+++ b/env.example
@@ -10,3 +10,8 @@ NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 
 RESEND_API_KEY=
 SENDER_EMAIL=
+
+HEYGEN_API_KEY=
+NEXT_PUBLIC_BASE_API_URL=
+
+OPEN_ROUTER_KEY=
