--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@heygen/streaming-avatar": "^2.0.16",
     "@hookform/resolvers": "^5.2.1",
+    "@openrouter/ai-sdk-provider": "^1.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "ahooks": "^3.9.0",
+    "ai": "^5.0.8",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
